--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>Bazar Lagbe - Online Super Market</title>
+    <meta name="keywords" content="HTML5 Template">
+    <meta name="description" content="Bazar Lagbe">
+    <meta name="author" content="p-themes">
 
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.21.9/dist/css/uikit.min.css" />
@@ -10,16 +17,16 @@
     <!-- Font-awesome-4.7.0 -->
     <link rel="stylesheet" type="text/css" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
 </head>
 <body>
 
     <!-- start top nav -->
-    <section id="top-nav">
-        <div class="container-fuild">
+    <section id="top-navbar">
+        <div class="uk-container-large">
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <nav uk-dropnav class="uk-navbar-container" style="background-color: #fff;">
                         <div class="uk-container">
                             <div uk-navbar>
@@ -72,9 +79,9 @@
 
     <!-- Start top-nav section -->
     <section id="bottom-navbar">
-        <div class="container-fuild">
+        <div class="uk-container-large">
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                      <nav class="uk-navbar-container shadow-sm" style="background-color: #28A745;">
                         <div class="uk-container">
                             <div uk-navbar>
@@ -133,7 +140,7 @@
     <section id="banner-section" class="mt-4">
         <div class="uk-container">
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
     <div class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@l uk-child-width-1-3@m uk-child-width-1-2@s uk-grid">
