--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Font-awesome-4.7.0 -->
     <link rel="stylesheet" type="text/css" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
 
 </head>
 <body>
