--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
                     <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500; font-weight: 500;">
-                        <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/m64.png" style="margin-left: 20px; margin-right: 15px;">MEAT</p>
+                        <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/m64.png" width="40" style="margin-left: 20px; margin-right: 15px;">MEAT</p>
                     </a>
                 </div>  
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
                     <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
-                        <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/f32.png" style="margin-left: 20px; margin-right: 15px;">FISH</p>
+                        <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/f32.png" width="40" style="margin-left: 20px; margin-right: 15px;">FISH</p>
                     </a>
                 </div>
 
