--- a/index.html
+++ b/index.html
@@ -303,43 +303,43 @@
                 <h5 class="mt-2 mb-3">Categories</h5>
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/m64.png" width="40" style="margin-left: 20px; margin-right: 15px;">MEAT</p>
                     </a>
                 </div>  
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/f32.png" width="40" style="margin-left: 20px; margin-right: 15px;">FISH</p>
                     </a>
                 </div>
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/v3212.png" width="40" style="margin-left: 20px; margin-right: 15px;">VEGETABLES</p>
                     </a>
                 </div>
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/fr322.png" width="40" style="margin-left: 20px; margin-right: 15px;">FRUITS</p>
                     </a>
                 </div>  
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/e321.png" width="40" style="margin-left: 20px; margin-right: 15px;">EGG</p>
                     </a>
                 </div>
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/s321.png" width="40" style="margin-left: 20px; margin-right: 15px;">SNACKS</p>
                     </a>
                 </div>
 
                 <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
-                    <a href="#" class="" style="text-decoration: none; text-decoration: none; font-size: 13px; color: #696969; font-weight: 500;">
+                    <a href="#" class="" style="text-decoration: none; text-decoration: none; color: #696969; font-weight: 500;">
                         <p style="background-color: #fff; border-radius: 4px; padding-top: 15px; padding-bottom: 15px; border: 1px solid #f4ca4b;" class="shadow-sm"><img src="assets/img/nav_icon/b3232.png" width="40" style="margin-left: 20px; margin-right: 15px;">BEVERAGES</p>
                     </a>
                 </div>  
