--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Font-awesome-4.7.0 -->
     <link rel="stylesheet" type="text/css" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
 </head>
 <body>
@@ -302,43 +302,43 @@
 
                 <h5 class="mt-2 mb-3">Categories</h5>
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/m64.png">MEAT</p>
                     </a>
                 </div>  
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/fh64i.png">FISH</p>
                     </a>
                 </div>
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/vvvv.png">VEGETABLES</p>
                     </a>
                 </div>
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/f64i.png">FRUITS</p>
                     </a>
                 </div>  
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/eee.png">EGG</p>
                     </a>
                 </div>
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/sss.png">SNACKS</p>
                     </a>
                 </div>
 
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2 mb-2">
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/bbb.png">BEVERAGES</p>
                     </a>
