--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Font-awesome-4.7.0 -->
     <link rel="stylesheet" type="text/css" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
 </head>
 <body>
@@ -415,53 +415,50 @@
         <div class="uk-container">
             <div class="row">
 
-                <div class="text-center" style="margin-top: 40px; margin-bottom: 40px;">
+                <div class="text-center" style="margin-top: 20px; margin-bottom: 30px;">
                     <h5 class="text-center">ALL PRODUCTS</h5>
-                    <a href="#" class="d-inline uk-badge uk-badge-success px-3 py-1 shadow-sm" style="background-color: #F99B0C; text-decoration: none;">See All</a>
+                    <a href="#" class="d-inline uk-badge uk-badge-success px-3 py-1 shadow-sm" style="background-color: #F99B0C;">See All</a>
                 </div>
-
-                <div class="uk-slider-container-offset mx-auto" uk-slider="autoplay: true; autoplay-interval: 3000; pause-on-hover: true;">
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-child-width-1-5@xl uk-grid">
+        <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid">
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3 uk-child-width-auto" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
-                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: none;">In Stock</div>
+                            <div class="uk-card-badge uk-label px-2" style="background-color: #2395F3; color: #fff; text-transform: none; ">In Stock</div>
                             <img class="pt-4" src="https://static.vecteezy.com/system/resources/thumbnails/035/047/756/small_2x/ai-generated-high-quality-photo-of-fresh-green-cabbage-vegetable-png.png" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
                         </div>
-                        <div class="uk-card-body mt-4 pt-0">
+                        <div class="uk-card-body mt-4 pt-0 pb-4">
                             <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
-                            <small class="text-muted">1KG</small>
-                            <h6 style="color: #000;">TK 60.00</h6>
-
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <small class="text-muted">1KG</small><br>
+                            <p class="d-inline text-muted" style="font-size: 13px;"><del>TK 65.00 </del></p><h6 class="d-inline" style="color: #000;">TK 60.00</h6>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px;">Add to Cart</a>
                         </div>
                     </div>
                 </a>
             </div>
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label" style="background-color: #F55D2C; color: #fff; text-transform: none;">Out of Stock</div>
                             <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2024/10/2/llnFQEdywq05PpdF7Ca3F1ZGtkIno3InIMPUWmps___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
                         </div>
-                        <div class="uk-card-body mt-4 pt-0">
+                        <div class="uk-card-body mt-4 pt-0 pb-4">
                             <h6 style="color: #000;">Rupchanda Soyabean Oil 5Ltr</h6>
                             <small class="text-muted">Each</small>
                             <h6 style="color: #000;">TK 820.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px;">Add to Cart</a>
                         </div>
                     </div>
                 </a>
             </div>
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
                             <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/6/6/QEizfuMW13kVLCmQH6hcCCzPZjtRlYWW60afhaji___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
@@ -478,7 +475,7 @@
             </div>
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
                             <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/7/sIeD5F26iiGgFIX9eCLYWdsoK3XSfgQcYIahpsW5___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
@@ -495,7 +492,7 @@
             </div>
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
                             <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/4/NLRAWjZEabujs4AtlyF22wF34yeh9tXhkG4Wb2jT___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
@@ -510,16 +507,147 @@
                     </div>
                 </a>
             </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/28/BdGXysVX9V2EAsaUmtdaqN8GkbbPnS1trlf1wvDU___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/6/m7BSbK2Uqs7WobTAxKTFx3sd0ZFmmngRbs1YJayK___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/7/kKPl0d9qPJxra6FqHlYTxVFjDGjQX8x3GXfqq9DC___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #28A745; color: #fff; text-transform: none;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/9/qOr0gfYPUFgxGkMUJpxFfSvV0L4azh0jGASgvcL1___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0 pb-4">
+                            <h6 style="color: #000;">Chopstick Desi Masala Inst Noodles 496gm</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #F55D2C; color: #fff; text-transform: none;">Out of Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2024/10/2/llnFQEdywq05PpdF7Ca3F1ZGtkIno3InIMPUWmps___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Rupchanda Soyabean Oil 5Ltr</h6>
+                            <small class="text-muted">Each</small>
+                            <h6 style="color: #000;">TK 820.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/7/1uHxUOY2CVpNKn5t9SXkc9qDXhrEItKJNXSmgqSD___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Beef Meat (গরুর মাংস)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 650.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/6/20/2LjmQQ5UA3NkzwZT4v03x4jttVge5Td7maoE1Udm___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                        <div class="uk-card-media-top">
+                            <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">In Stock</div>
+                            <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/3/29/69rrVhV8XPPsGzO7N3xPSbpnPZC5Sg6YoioXrLcw___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                        </div>
+                        <div class="uk-card-body mt-4 pt-0">
+                            <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                            <small class="text-muted">1KG</small>
+                            <h6 style="color: #000;">TK 60.00</h6>
+
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
 
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous uk-slider-item="previous" style="color: #767676;"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href uk-slidenav-next uk-slider-item="next" style="color: #767676;"></a>
 
     </div>
-
-    <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-</div>
 
             </div>
         </div>
