--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 
                                     <ul class="uk-navbar-nav">
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">Our Brands</a></li>
-                                        <li><a href="#">Checkout Process</a></li>
+                                        <li><a href="#">All Products</a></li>
+                                        <li><a href="#">New Products</a></li>
                                         <li><a href="#">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -328,76 +328,134 @@
 
 
     <!-- Start category section -->
-    <section id="category-section" class="mt-4">
+    <section id="category-section" class="mt-4 mcx-auto">
         <div class="uk-container">
             <div class="row">
                 <h5 class="mt-3 mb-4">Top Categories</h5>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
-                    <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/m64.png">MEAT</p>
-                    </a>
-                </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="uk-child-width-1-3 uk-child-width-1-4@s uk-child-width-1-5@m uk-child-width-1-6@l uk-child-width-1-6@xl uk-grid-small uk-grid-match" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center" style="border-radius: 3px;">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/vvvv.png"></h3>
+                            <span>VEGETABLE</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/f64i.png"></h3>
+                            <span>FRUITS</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
+                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
+                            <span>FISH</span>
+                        </div>
+                    </div>
+
+                </div> 
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/fh64i.png">FISH</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/vvvv.png">VEGETABLES</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/f64i.png">FRUITS</p>
                     </a>
                 </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/eee.png">EGG</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/sss.png">SNACKS</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/bbb.png">BEVERAGES</p>
                     </a>
                 </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/m64.png">MEAT</p>
                     </a>
                 </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/fh64i.png">FISH</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/vvvv.png">VEGETABLES</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/f64i.png">FRUITS</p>
                     </a>
                 </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/eee.png">EGG</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/sss.png">SNACKS</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
                     <a href="#">
                         <p class="shadow-sm"><img src="assets/img/nav_icon/bbb.png">BEVERAGES</p>
                     </a>
