--- a/index.html
+++ b/index.html
@@ -331,135 +331,112 @@
     <section id="category-section" class="mt-4 mcx-auto">
         <div class="uk-container">
             <div class="row">
-                <h5 class="mt-3 mb-4">Top Categories</h5>
-                <div class="uk-child-width-1-3 uk-child-width-1-4@s uk-child-width-1-5@m uk-child-width-1-6@l uk-child-width-1-6@xl uk-grid-small uk-grid-match" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center" style="border-radius: 3px;">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/vvvv.png"></h3>
-                            <span>VEGETABLE</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/f64i.png"></h3>
-                            <span>FRUITS</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body py-2 uk-text-center">
-                            <h3 class="uk-card-title"><img src="assets/img/nav_icon/fh64i.png"></h3>
-                            <span>FISH</span>
-                        </div>
-                    </div>
+                <h5 class="mt-3 mb-4">Top Categories</h5> 
 
-                </div> 
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+
+
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/fh64i.png">FISH</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/m64.png"><br>
+                        MEAT</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/vvvv.png">VEGETABLES</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/fh64i.png"><br>
+                        FISH</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/f64i.png">FRUITS</p>
-                    </a>
-                </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
-                    <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/eee.png">EGG</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/vvvv.png"><br>
+                        VEGETABLE</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/sss.png">SNACKS</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/f64i.png"><br>
+                        FRUITS</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/bbb.png">BEVERAGES</p>
-                    </a>
-                </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
-                    <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/m64.png">MEAT</p>
-                    </a>
-                </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
-                    <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/fh64i.png">FISH</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/eee.png"><br>
+                        EGG</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/vvvv.png">VEGETABLES</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/sss.png"><br>
+                        SNACKS</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/f64i.png">FRUITS</p>
-                    </a>
-                </div>  
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
-                    <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/eee.png">EGG</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/bbb.png"><br>
+                        BEVERAGES</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/sss.png">SNACKS</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/m64.png"><br>
+                        MEAT</p>
                     </a>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-1 col-xl-1">
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="shadow-sm"><img src="assets/img/nav_icon/bbb.png">BEVERAGES</p>
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/fh64i.png"><br>
+                        FISH</p>
                     </a>
-                </div> 
+                </div>
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/vvvv.png"><br>
+                        VEGETABLE</p>
+                    </a>
+                </div>
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/f64i.png"><br>
+                        FRUITS</p>
+                    </a>
+                </div>
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/eee.png"><br>
+                        EGG</p>
+                    </a>
+                </div>
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/sss.png"><br>
+                        SNACKS</p>
+                    </a>
+                </div>
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/bbb.png"><br>
+                        BEVERAGES</p>
+                    </a>
+                </div>
+
+
+
+                 
             </div>
         </div>
     </section>
